2013-09-04  Roland McGrath  <mcgrathr@google.com>

	PR gas/15914
	* config/tc-arm.c (T16_32_TAB): Add _udf.
	(do_t_udf): New function.
	(insns): Add "udf".

2013-08-23  Sandeep Kumar Singh  <Sandeep.Singh2@kpitcummins.com>

	* config/rx-parse.y: Rearrange the components of a bison grammar to issue
	assembler errors at correct position.

2013-08-23  Yuri Chornoivan  <yurchor@ukr.net>

	PR binutils/15834
	* config/tc-ia64.c: Fix typos.
	* config/tc-sparc.c: Likewise.
	* config/tc-z80.c: Likewise.
	* doc/c-i386.texi: Likewise.
	* doc/c-m32r.texi: Likewise.

2013-08-23  Will Newton  <will.newton@linaro.org>

	* config/tc-arm.c: (do_neon_ldx_stx): Add extra constraints
	for pre-indexed addressing modes.

2013-08-21  Alan Modra  <amodra@gmail.com>

	* symbols.c (fb_label_instance_inc, fb_label_instance): Properly
	range check label number for use with fb_low_counter array.

2013-08-19  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (mips_check_isa_supports_ase, reg_lookup)
	(mips_parse_argument_token, validate_micromips_insn, md_begin)
	(check_regno, match_float_constant, check_completed_insn, append_insn)
	(match_insn, match_mips16_insn, match_insns, macro_start)
	(macro_build_ldst_constoffset, load_register, macro, mips_ip)
	(mips16_ip, mips_set_option_string, md_parse_option)
	(mips_after_parse_args, mips_after_parse_args, md_pcrel_from)
	(md_apply_fix, s_align, s_option, s_mipsset, s_tls_rel_directive)
	(s_gpword, s_gpdword, s_ehword, s_nan, tc_gen_reloc, md_convert_frag)
	(s_mips_end, s_mips_ent, s_mips_frame, s_mips_mask, mips_parse_cpu):
	Start error messages with a lower-case letter.  Do not end error
	messages with a period.  Wrap long messages to 80 character-lines.
	Use "cannot" instead of "can't" and "can not".

2013-08-19  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (imm_expr): Expand comment.
	(set_at, macro, mips16_macro): Expect imm_expr to be O_constant
	when populated.
